--- a/SiteWeb/requirements.txt
+++ b/SiteWeb/requirements.txt
@@ -1,12 +1,19 @@
-Bootstrap-Flask==2.1.0
-click==8.1.3
-dominate==2.7.0
-Flask==2.2.2
+blinker==1.6.3
+Bootstrap-Flask==2.3.2
+click==8.1.7
+Flask==3.0.0
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.1
-python-dotenv==0.21.0
-PyYAML==6.0
-visitor==0.1.3
+MarkupSafe==2.1.3
+pip==22.0.2
+PyYAML==6.0.1
+setuptools==59.6.0
+SQLAlchemy==2.0.22
+typing_extensions==4.8.0
 Werkzeug==2.2.2
-WTForms==3.0.1
+wheel==0.37.1
+WTForms==3.1.0
